--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 </ul>
                 <p class="text-muted small mb-0">
                     Copyright (C) 2022-2023 adudu21
-                    <a href="https://github.com/aduud21/heckerbot/blob/main/LICENSE">YSNBA</a>
+                    <a href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt">YSNBA</a>
                     <a
-                        href="https://github.com/aduud21/heckerbot/blob/main/LICENSE"
+                        href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt"
                         target="_blank"
                         rel="noopener noreferrer"
                         >(Version 1.3)</a
