--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <meta name="theme-color" content="#f54254" />
         <link rel="icon" type="image/png" sizes="300x250" href="images/bot.png" />
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" />
-        <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
-        <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
@@ -97,143 +94,157 @@
             </div>
         </header>
 
-        <img class="rounded" src="images/bot.png" width="50" height="50" style="margin-top: 30px" />
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-            Information:
-        </h1>
-        <p style="color: var(--secondary-text-color)">
-            This bot contains 5+ commands,<br />
-            this bot contains fun commands such as rock paper scissors,<br />
-            this bot contains setmodlogs command which this command will log any message that is
-            removed/edited (if you set it up),<br />
-            The bot currently supports slash commands
-        </p>
+        <section id="information">
+            <footer class="footer text-center">
+                <div class="container">
+                    <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
+                        Information:
+                    </h1>
+                    <p style="color: var(--secondary-text-color)">
+                        This bot contains 5+ commands,<br />
+                        this bot contains fun commands such as rock paper scissors,<br />
+                        this bot contains setmodlogs command which this command will log any message
+                        that is removed/edited (if you set it up),<br />
+                        The bot currently supports slash commands
+                    </p>
+                </div>
+            </footer>
+        </section>
 
-        <img
-            class="rounded"
-            src="images/sc.png"
-            width="150"
-            height="200"
-            style="margin-top: 30px"
-        />
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">Secure</h1>
-        <p style="color: var(--secondary-text-color)">
-            The token of the bot is not shared with anyone or made public. I make sure to prevent
-            anyone except me from accessing it.
-        </p>
+        <section id="secure">
+            <footer class="footer text-center">
+                <div class="container">
+                    <img
+                        class="rounded"
+                        src="images/sc.png"
+                        width="150"
+                        height="200"
+                        style="margin-top: 30px"
+                    />
+                    <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
+                        Secure
+                    </h1>
+                    <p style="color: var(--secondary-text-color)">
+                        The token of the bot is not shared with anyone or made public. I make sure
+                        to prevent anyone except me from accessing it.
+                    </p>
+                </div>
+            </footer>
+        </section>
 
-        <img class="rounded" src="images/s.png" width="150" height="150" style="margin-top: 30px" />
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-            I respect your privacy
-        </h1>
-        <p style="color: var(--secondary-text-color)">
-            I do not collect much data from your server. You can check the privacy policy if you
-            want.
-        </p>
-
-        <img
-            class="rounded"
-            src="images/foss-image.png"
-            width="150"
-            height="150"
-            style="margin-top: 30px"
-        />
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-            FOSS (Free Open-Source Software)
-        </h1>
-        <p style="color: var(--secondary-text-color)">
-            The bot is almost fully open source, but it can't be completely open source as that
-            would include the bot's token.
-        </p>
-        <a
-            title="The bot's Code on GitHub"
-            href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fhecker-discord-bot-website.aguythatlikesfurrys.repl.co%2F&utm_medium=referral&utm_campaign=github-link"
-            class="btn btn-primary shadow-none"
-            type="button"
-            style="
-                margin: 1px;
-                background-color: var(--main-color);
-                border-color: var(--main-color);
-                border-radius: 3px;
-            "
-            >Code of the bot on GitHub</a
-        >
-
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-            Extra Information:
-        </h1>
-        <p style="color: var(--secondary-text-color)">
-            The bot may be updated at any time. The source code is public. If you have any concerns,
-            please join the support server and contact the creator or email
-            contact-adudu21@proton.me
-        </p>
-
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">Legal:</h1>
-        <a
-            title="Terms of service for the bot"
-            href="https://docs.google.com/document/d/1MEtsV2x2lXzvotgoB-q8pICNc9rKg6RMRK3q6dSfR0g"
-            class="btn btn-primary shadow-none"
-            type="button"
-            style="
-                margin: 1px;
-                background-color: var(--main-color);
-                border-color: var(--main-color);
-                border-radius: 3px;
-            "
-            >Terms of service</a
-        >
-        <a
-            title="Privacy policy for the bot"
-            href="https://docs.google.com/document/d/1NhzKeSVhoRObQTy2vLWgBQrPw3gWJogUSGYSO7BCKn4"
-            class="btn btn-primary shadow-none"
-            type="button"
-            style="
-                margin: 1px;
-                background-color: var(--main-color);
-                border-color: var(--main-color);
-                border-radius: 3px;
-            "
-            >Privacy Policy</a
-        >
-
-        <footer class="footer text-center">
-            <div class="container">
-                <ul class="list-inline mb-5">
-                    <li class="list-inline-item">
-                        <a
-                            class="social-link rounded-circle text-white mr-3"
-                            href="https://discord.gg/a9ShpMzU8R"
-                            ><i class="icon ion-social-discord"></i
-                        ></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a
-                            class="social-link rounded-circle text-white mr-3"
-                            href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fhecker-discord-bot-website.aguythatlikesfurrys.repl.co%2F&utm_medium=referral&utm_campaign=github-link"
-                            ><i class="icon ion-social-github"></i
-                        ></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a
-                            class="social-link rounded-circle text-white"
-                            href="https://twitter.com/aduud21"
-                            ><i class="icon ion-social-twitter"></i
-                        ></a>
-                    </li>
-                </ul>
-                <p class="text-muted small mb-0">
-                    Copyright (C) 2022-2023 adudu21
-                    <a href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt">YSNBA</a>
+        <section id="privacy">
+            <footer class="footer text-center">
+                <div class="container">
+                    <img
+                        class="rounded"
+                        src="images/s.png"
+                        width="150"
+                        height="150"
+                        style="margin-top: 30px"
+                    />
+                    <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
+                        I respect your privacy
+                    </h1>
+                    <p style="color: var(--secondary-text-color)">
+                        I do not collect much data from your server. You can check the privacy
+                        policy if you want.
+                    </p>
                     <a
-                        href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >(Version 1.3)</a
+                        title="Terms of service for the bot"
+                        href="https://docs.google.com/document/d/1f3yKJK7fkyihu_vIx5z62T3-40oR5Mo9zjaTUYWcFG0/view"
+                        class="btn btn-primary shadow-none"
+                        type="button"
+                        style="
+                            margin: 1px;
+                            background-color: var(--main-color);
+                            border-color: var(--main-color);
+                            border-radius: 3px;
+                        "
+                        >Terms of service</a
                     >
-                </p>
-            </div>
-        </footer>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+                    <a
+                        title="Privacy policy for the bot"
+                        href="https://docs.google.com/document/d/11ZH5vHB__avP1COLx9rSIxytjnIDdHvLYSCOaUUJnwY/view"
+                        class="btn btn-primary shadow-none"
+                        type="button"
+                        style="
+                            margin: 1px;
+                            background-color: var(--main-color);
+                            border-color: var(--main-color);
+                            border-radius: 3px;
+                        "
+                        >Privacy Policy</a
+                    >
+                </div>
+            </footer>
+        </section>
+
+        <section id="foss">
+            <footer class="footer text-center">
+                <div class="container">
+                    <img
+                        class="rounded"
+                        src="images/foss-image.png"
+                        width="150"
+                        height="150"
+                        style="margin-top: 30px"
+                    />
+                    <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
+                        FOSS (Free Open-Source Software)
+                    </h1>
+                    <p style="color: var(--secondary-text-color)">
+                        The bot is almost fully open source, but it can't be completely open source
+                        as that would include the bot's token.
+                    </p>
+                    <a
+                        title="The bot's Code on GitHub"
+                        href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fhecker-discord-bot-website.aguythatlikesfurrys.repl.co%2F&utm_medium=referral&utm_campaign=github-link"
+                        class="btn btn-primary shadow-none"
+                        type="button"
+                        style="
+                            margin: 1px;
+                            background-color: var(--main-color);
+                            border-color: var(--main-color);
+                            border-radius: 3px;
+                        "
+                        >Code of the bot on GitHub</a
+                    >
+                </div>
+            </footer>
+        </section>
+
+        <section id="extra-information">
+            <footer class="footer text-center">
+                <div class="container">
+                    <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
+                        Extra Information:
+                    </h1>
+                    <p style="color: var(--secondary-text-color)">
+                        The bot may be updated at any time. The source code is public. If you have
+                        any concerns, please join the support server and contact the creator or
+                        email contact-adudu21@proton.me
+                    </p>
+                </div>
+            </footer>
+        </section>
+
+        <section id="copyright">
+            <footer class="footer text-center">
+                <div class="container">
+                    <p class="text-muted small mb-0">
+                        Copyright (C) 2022-2023 adudu21
+                        <a href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt"
+                            >YSNBA</a
+                        >
+                        <a
+                            href="https://github.com/aduud21/heckerbotwebsite/blob/main/LICENSE.txt"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >(Version 1.3)</a
+                        >
+                    </p>
+                </div>
+            </footer>
+        </section>
     </body>
 </html>
