--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                     </h1>
                     <p style="color: var(--secondary-text-color)">
                         The bot may be updated at any time. The source code is public. If you have
-                        any concerns, please join the support server and contact the creator or
-                        email contact-adudu21@proton.me
+                        any concerns, please join the support server and contact the creator
                     </p>
                 </div>
             </footer>
