--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>MutilpleBot</title>
         <meta name="description" content="A discord bot" />
         <meta name="theme-color" content="#f54254" />
+        <meta name="author" content="adudu21 <https://github.com/aduud21>" />
+        <meta
+            name="keywords"
+            content="discord bot, discord, discord robot, bot, free discord bot, free discord robot, free verified discord bot, free verified discord robot"
+        />
         <link rel="icon" type="image/png" sizes="300x250" href="images/bot.png" />
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
         <link
@@ -16,32 +21,7 @@
     </head>
 
     <body style="background-color: var(--background)">
-        <div id="top" style="height: 12px">
-            <nav
-                class="navbar navbar-light navbar-expand fixed-top"
-                style="
-                    color: var(--main-color);
-                    border-top-width: 6px;
-                    border-top-style: solid;
-                    background: var(--background);
-                "
-            >
-                <div class="container-fluid">
-                    <a
-                        class="navbar-brand"
-                        href="#"
-                        style="color: var(--main-color); font-family: 'Alfa Slab One', cursive"
-                    ></a>
-                    <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
-                        <span class="sr-only"
-                            >Website is loading, mean while here's a button you can press?</span
-                        >
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navcol-1"></div>
-                </div>
-            </nav>
-        </div>
+        <div id="top" style="height: 12px"></div>
 
         <header
             class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
