--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="adudu21 <https://github.com/aduud21>" />
         <meta
             name="keywords"
-            content="discord bot, discord, discord robot, bot, free discord bot, free discord robot, free verified discord bot, free verified discord robot"
+            content="discord bot, discord, discord robot, bot, discord bot, discord robot, verified discord bot, verified discord robot"
         />
         <link rel="icon" type="image/png" sizes="300x250" href="images/bot.png" />
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
@@ -159,18 +159,18 @@
             </footer>
         </section>
 
-        <section id="foss">
+        <section id="oss">
             <footer class="footer text-center">
                 <div class="container">
                     <img
                         class="rounded"
-                        src="images/foss-image.png"
+                        src="images/oss-image.png"
                         width="150"
                         height="150"
                         style="margin-top: 30px"
                     />
                     <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-                        FOSS (Free Open-Source Software)
+                        OSS (Open-Source Software)
                     </h1>
                     <p style="color: var(--secondary-text-color)">
                         The bot is almost fully open source, but it can't be completely open source
