--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
     <div id="top" style="height: 12px"></div>
     <section id="policy">
         <div class="container">
-            <p><strong>MultipleBot Privacy Policy</strong></p>
+            <h1 style="color: var(--secondary-text-color)">MultipleBot Privacy Policy:</h1>
             <p>
                 When using MultipleBot, I store data about your server to bring you a better
                 experience (if you use certain features which are said in this privacy policy).
