make it more easy to understand

--- a/privacy.html
+++ b/privacy.html
@@ -21,7 +21,7 @@
                 When using MultipleBot, I store data about your server to bring you a better
                 experience (if you use certain features which are said in this privacy policy).
             </p>
-            <p>Last Modified September 1, 2023.</p>
+            <p>Last Modified October 9, 2023.</p>
             <p>
                 <strong>What information do I store from the people that use MultipleBot?</strong>
             </p>
@@ -32,12 +32,12 @@
             <p>
                 Server ID and Channel ID(s) are used for the setmodlog (modlog) feature, without
                 Server ID/Channel ID(s) MultipleBot cannot send logs of messages as Server ID and
-                Channel ID are required to identify your discord server for such feature.
+                Channel ID is required to identify your discord server for such feature.
             </p>
             <p>
                 For any information sent via the setmodlog feature, the bot will attempt to remove
                 personal information from the message (numbers). MultipleBot does not store message
-                content within the database for storage purposes.
+                content in a database for storage and privacy purposes.
             </p>
             <p><strong>Anonymous Collection</strong></p>
             <p>
@@ -62,7 +62,7 @@
             </p>
             <p><strong>Agreement</strong></p>
             <p>
-                By using MultipleBot, you agree to the terms of this Privacy Policy. If you do not
+                By using MultipleBot, you agree to these terms of this Privacy Policy. If you do not
                 agree to these terms, you must not use this service.
             </p>
             <p>
