--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
                 MutilpleBot
             </h1>
+            <p style="color: var(--warning-text-color)">
+            Bot invitations are currently disabled, it will soon open. Warning wrote on 10/9/2023.
+            </p>
             <p style="color: var(--secondary-text-color)">A discord bot</p>
             <div role="group" class="btn-group">
                 <a
@@ -71,11 +74,11 @@
             <footer class="footer text-center">
                 <div class="container">
                     <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-                        Information:
+                        Some Information:
                     </h1>
                     <p style="color: var(--secondary-text-color)">
                         This bot contains 10+ commands,<br />
-                        this bot contains fun commands such as rock paper scissors,<br />
+                        this bot contains some fun commands such as rock paper scissors,<br />
                         this bot contains setmodlogs command which this command will log any message
                         that is removed/edited (if you set it up),<br />
                         The bot currently supports slash commands
