--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
                 MutilpleBot
             </h1>
-            <p style="color: var(--warning-text-color)">
+            <p style="color: var(--warning)">
             Bot invitations are currently disabled, it will soon open. Warning wrote on 10/9/2023.
             </p>
             <p style="color: var(--secondary-text-color)">A discord bot</p>
