--- a/index.html
+++ b/index.html
@@ -98,11 +98,10 @@
                         style="margin-top: 30px"
                     />
                     <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-                        Secure
+                       Probably Secure
                     </h1>
                     <p style="color: var(--secondary-text-color)">
-                        The token of the bot is not shared with anyone or made public. I make sure
-                        to prevent anyone except me from accessing it.
+                        The token of the bot is not shared with anyone or made public. i try my best to make myself the only one who has access towards it.
                     </p>
                 </div>
             </footer>
@@ -122,8 +121,7 @@
                         I respect your privacy
                     </h1>
                     <p style="color: var(--secondary-text-color)">
-                        I do not collect much data from your server. You can check the privacy
-                        policy if you want.
+                        in short, MutilpleBot only stores ServerID and ChannelID(s) if the setmodlog slash command is used.
                     </p>
                     <a
                         title="Terms of service for the bot"
