--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </p>
                     <a
                         title="Terms of service for the bot"
-                        href="tos.html"
+                        href="tos"
                         class="btn btn-primary shadow-none"
                         type="button"
                         style="
@@ -137,7 +137,7 @@
                     >
                     <a
                         title="Privacy policy for the bot"
-                        href="privacy.html"
+                        href="privacy"
                         class="btn btn-primary shadow-none"
                         type="button"
                         style="
