update TERMS OF SERVICE

--- a/tos.html
+++ b/tos.html
@@ -56,7 +56,7 @@
                 use or more generally, acts for purposes outside their trade, business, craft, or
                 profession.
             </p>
-            <p>Last Modified September 1, 2023.</p>
+            <p>Last Modified October 12, 2023.</p>
             <p><strong>1. Terms</strong></p>
             <p>
                 By accessing and/or using this service, you are agreeing to be bound by these terms
@@ -66,8 +66,8 @@
             </p>
             <p><strong>2. Use License & Banned Use Cases</strong></p>
             <p>
-                You must comply with the License of the application if you copy the code of this
-                application.
+                You must comply with the License of the application/service if you copy the code of this
+                application/service.
             </p>
             <p>
                 You must ensure not to use this service for malicious purposes and/or harmful
@@ -373,7 +373,7 @@
         <footer class="footer text-center">
             <div class="container">
                 <p class="text-muted small mb-0">
-                    Copyright (C) 2022-2023 adudu21 <a href="LICENSE.txt">YSNBA</a>
+                    Copyright (C) 2022-2024 adudu21 <a href="LICENSE.txt">YSNBA</a>
                     <a href="LICENSE.txt" target="_blank" rel="noopener noreferrer"
                         >(Version 1.5)</a
                     >
