--- a/privacy.html
+++ b/privacy.html
@@ -19,14 +19,15 @@
             <h1 style="color: var(--secondary-text-color)">MultipleBot Privacy Policy:</h1>
             <p>
                 When using MultipleBot, I store data about your server to bring you a better
-                experience (if you use certain features which are said in this privacy policy).
+                experience generally (if you use certain features which are said in this privacy policy).
             </p>
-            <p>Last Modified October 9, 2023.</p>
+<p>Effective: October 12, 2023.</p>
+            <p>Last Updated October 12, 2023.</p>
             <p>
                 <strong>What information do I store from the people that use MultipleBot?</strong>
             </p>
             <p>
-                Only public information about your discord server. This is your Server ID, Channel
+                Only public information of your discord server. This is your Server ID, Channel
                 ID(s).
             </p>
             <p>
@@ -41,7 +42,7 @@
             </p>
             <p><strong>Anonymous Collection</strong></p>
             <p>
-                I may collect the amount (in numbers) of discord servers which use this bot/service.
+                I may collect the amount of discord servers which use this bot/service.
                 This in no way can identify you or your discord server. This information may be used
                 for Advertising or such.
             </p>
@@ -58,7 +59,7 @@
             <p><strong>Security Measures:</strong></p>
             <p>
                 This only applies if modlogs were set up. The data collected is stored in MongoDB
-                with a very long password. Only the owner has access to it directly.
+                with a very long password & username. Only the owner should have access to it.
             </p>
             <p><strong>Agreement</strong></p>
             <p>
@@ -69,6 +70,7 @@
                 You may delete the data the bot has collected about your server if the bot is in
                 your server and you have proper permissions by using this command: /deldata and/or
                 kicking the bot from your server while the bot is online.
+                otherwise please contact the Owner about the issue in the discord server
             </p>
         </div>
     </section>
@@ -76,7 +78,7 @@
         <footer class="footer text-center">
             <div class="container">
                 <p class="text-muted small mb-0">
-                    Copyright (C) 2022-2023 adudu21 <a href="LICENSE.txt">YSNBA</a>
+                    Copyright (C) 2022-2024 adudu21 <a href="LICENSE.txt">YSNBA</a>
                     <a href="LICENSE.txt" target="_blank" rel="noopener noreferrer"
                         >(Version 1.5)</a
                     >
