--- a/tos.html
+++ b/tos.html
@@ -56,7 +56,8 @@
                 use or more generally, acts for purposes outside their trade, business, craft, or
                 profession.
             </p>
-            <p>Last Modified October 12, 2023.</p>
+            <p>Effective: October 15, 2023.</p>
+            <p>Last Updated October 12, 2023.</p>
             <p><strong>1. Terms</strong></p>
             <p>
                 By accessing and/or using this service, you are agreeing to be bound by these terms
