--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         />
 
         <link rel="icon" type="image/png" sizes="300x250" href="images/bot.png" />
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="styles.css" />
     </head>
 
     <body style="background-color: var(--background)">
