--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                         as that would include the bot's token.
                     </p>
                     <a
-                        title="The bot's Code on GitHub"
-                        href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fhecker-discord-bot-website.aguythatlikesfurrys.repl.co%2F&utm_medium=referral&utm_campaign=github-link"
+                        title="Bot code is on GitHub"
+                        href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fmultiplebot.pages.dev%2F&utm_medium=referral&utm_campaign=github-link"
                         class="btn btn-primary shadow-none"
                         type="button"
                         style="
