--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </p>
                     <a
                         title="Bot code is on GitHub"
-                        href="https://github.com/aduud21/heckerbot?utm_source=https%3A%2F%2Fmultiplebot.pages.dev%2F&utm_medium=referral&utm_campaign=github-link"
+                        href="https://github.com/aduud21/heckerbot?utm_source=multiplebot.pages.dev&utm_medium=referral&utm_campaign=github-link"
                         class="btn btn-primary shadow-none"
                         type="button"
                         style="
