--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
                 MutilpleBot
             </h1>
-            <p style="color: var(--warning)">
-            Bot invitations are currently disabled, it will soon open. Warning wrote on 10/9/2023.
+            <p style="color: var(--info)">
+            MultipleBot is no longer supported, because of this, it will be deleted.
             </p>
             <div role="group" class="btn-group">
                 <a
