--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 MutilpleBot
             </h1>
             <p style="color: var(--info)">
-            MultipleBot is no longer supported, because of this, it will be deleted.
+            MutilpleBot is no longer supported, because of this, it will be deleted.
+            </p>
+ <p style="color: var(--danger)">
+            This website and such will be DELETED soon.
             </p>
             <div role="group" class="btn-group">
                 <a
