--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-        <title>MutilpleBot</title>
+        <title>(EOL) MutilpleBot</title>
         <meta name="description" content="A discord bot" />
         <meta name="theme-color" content="#f54254" />
         <meta name="author" content="adudu21 <https://github.com/aduud21>" />
@@ -32,44 +32,14 @@
                 style="margin-top: 30px"
             />
             <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color)">
-                MutilpleBot
+                (EOL) MutilpleBot
             </h1>
             <p style="color: var(--info)">
-            MutilpleBot is no longer supported, because of this, it will be deleted.
+            MutilpleBot is no longer supported, the reason is because i do not want to maintain it anymore and i've gotten death threats.
             </p>
  <p style="color: var(--danger)">
-            This website and such will be DELETED soon.
+            The bot has been permanently deleted, this website is now archived.
             </p>
-            <div role="group" class="btn-group">
-                <a
-                    title="Invite MutilpleBot to your server"
-                    href="https://discord.com/api/oauth2/authorize?client_id=947733660432490506&permissions=8&scope=applications.commands%20bot"
-                    class="btn btn-primary shadow-none"
-                    type="button"
-                    style="
-                        margin: 5px;
-                        background-color: var(--main-color);
-                        border-color: var(--main-color);
-                        border-radius: 10px;
-                    "
-                    >Invite me</a
-                >
-            </div>
-            <div role="group" class="btn-group">
-                <a
-                    title="Support server"
-                    href="https://discord.gg/YSEB7PnHVV"
-                    class="btn btn-primary shadow-none"
-                    type="button"
-                    style="
-                        margin: 5px;
-                        background-color: var(--main-color);
-                        border-color: var(--main-color);
-                        border-radius: 10px;
-                    "
-                    >Support server</a
-                >
-            </div>
         </header>
 
         <section id="information">
@@ -79,11 +49,11 @@
                         Some Information:
                     </h1>
                     <p style="color: var(--secondary-text-color)">
-                        This bot contains 10+ commands,<br />
-                        this bot contains some fun commands such as rock paper scissors,<br />
-                        this bot contains setmodlogs command which this command will log any message
+                        This bot contained 10+ commands,<br />
+                        this bot contained some fun commands such as rock paper scissors,<br />
+                        this bot contained setmodlogs command which this command will log any message
                         that is removed/edited (if you set it up),<br />
-                        The bot currently supports slash commands
+                        The bot supported slash commands
                     </p>
                 </div>
             </footer>
